# the-super-tiny-rusty-compiler

./: Cargo.toml  README.md
src/: ast.rs  codegen.rs  lib.rs  main.rs  parser.rs  token.rs  transform.rs
tests/: compiler.rs
